--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typedi": "^0.10.0"
   },
   "devDependencies": {
+    "lodash": "^4.17.21",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   }
