--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   "homepage": "https://github.com/bogin/snappers#readme",
   "dependencies": {
     "child_process": "^1.0.2",
-    "nodemon": "^3.0.1",
-    "typedi": "^0.10.0"
+    "nodemon": "^3.0.1"
   },
   "devDependencies": {
     "lodash": "^4.17.21",
